--- a/recipes/okonomiyaki.html
+++ b/recipes/okonomiyaki.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Okonomiyaki</title>
 </head>
 <body>
-    <h1>Odin Recipes!</h1>
-    <ol>
-        <li><a href="./recipes/okonomiyaki.html">Okonomiyaki</a></li>
-    </ol>
+    
 </body>
 </html>
