--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes!</h1>
+    <h1>Recipes from the East!</h1>
     <ol>
         <li><a href="./recipes/okonomiyaki.html">Okonomiyaki</a></li>
+        <li><a href="./recipes/tangyuan.html">Tang Yuan</a></li>
     </ol>
 </body>
 </html>
