Adjust image size for all recipes

--- a/recipes/okonomiyaki.html
+++ b/recipes/okonomiyaki.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Okonomiyaki</h1>
-    <img src="../images/okonomiyaki.jpg" alt="Picture of Okonomiyaki. Credits://unsplash.com/photos/Km99aOxh96E?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink/">
+    <img src="../images/okonomiyaki.jpg" 
+    alt="Picture of Okonomiyaki. Credits://unsplash.com/photos/Km99aOxh96E?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink/"
+    height="500">
     
     <h2>Description</h2>
     <p>A savoury Japanese pancake that is chock full of vegetables yet so good! Suitable for any occasion because it is so simple yet delishhh!</p>
