--- a/recipes/tangyuan.html
+++ b/recipes/tangyuan.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Tang Yuan</h1>
-    <img src="../images/tangyuan.jpg" alt="Picture of Tang Yuan. Credits://unsplash.com/photos/nSXvmer_WY4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">
-    
+    <img src="../images/tangyuan.jpg" 
+    alt="Picture of Tang Yuan. Credits://unsplash.com/photos/nSXvmer_WY4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink"
+    height="500">
+
     <h2>Description</h2>
     <p>A sweet Chinese dessert that is easy to make! For sweet tooths who want something chewy.</p>
 
