Style pages with CSS
Added styles.css
.html files are modified to contain classes for styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Recipes from the East!</h1>
-    <ol>
-        <li><a href="./recipes/okonomiyaki.html">Okonomiyaki</a></li>
-        <li><a href="./recipes/tangyuan.html">Tang Yuan</a></li>
+    <h1 class="home-page-box home-page-header title">Recipes from the East!</h1>
+    <ol class="home-page-content list">
+        <li><a href="./recipes/okonomiyaki.html"> <button class="home-page-list-item home-page-box">Okonomiyaki</button></a></li>
+        <li><a href="./recipes/tangyuan.html"><button class="home-page-list-item home-page-box">Tang Yuan</button></a></li>
     </ol>
 </body>
 </html>
