--- a/recipes/okonomiyaki.html
+++ b/recipes/okonomiyaki.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okonomiyaki</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
-    <h1>Okonomiyaki</h1>
+    <h1 class="title">Okonomiyaki</h1>
     <img src="../images/okonomiyaki.jpg" 
     alt="Picture of Okonomiyaki. Credits://unsplash.com/photos/Km99aOxh96E?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink/"
     height="500">
