--- a/recipes/tangyuan.html
+++ b/recipes/tangyuan.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tang Yuan</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
-    <h1>Tang Yuan</h1>
+    <h1 class="title">Tang Yuan</h1>
     <img src="../images/tangyuan.jpg" 
     alt="Picture of Tang Yuan. Credits://unsplash.com/photos/nSXvmer_WY4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink"
-    height="500">
+    width="500">
 
     <h2>Description</h2>
     <p>A sweet Chinese dessert that is easy to make! For sweet tooths who want something chewy.</p>
